--- a/index.html
+++ b/index.html
@@ -8,6 +8,87 @@
     <link rel="stlylesheet" href="style.css">
 </head>
 <body>
-    
+    <main class="index-main">
+        <div class="controls">
+            <div class="color-filters">
+                <label>Цвет текста:
+                    <select class="filter color-setting"
+                    name="font-color">
+                       <option value="inherit" selected>Дефолтный</option>
+                       <option value="black">Черный</option>
+                       <option value="white">Белый</option>
+                       <option value="pink">Розовый</option>
+                       <option value="darkorange">Оранжеый</option>
+                       <option value="gold">Золотой</option>
+                       <option value="greenyellow">Салатовый</option>
+                       <option value="darkblue">Темно-синий</option>
+                       <option value="purple">Пурпурный</option>
+                     </select>
+                </label>
+                <label> Цвет фона:
+                    <select class="filter background-setting" name="background-color">
+                        <option value="inherit" selected>Дефолтный</option>
+                        <option value="black">Черный</option>
+                        <option value="white">Белый</option>
+                        <option value="pink">Розовый</option>
+                        <option value="darkorange">Оранжеый</option>
+                        <option value="gold">Золотой</option>
+                        <option value="greenyellow">Салатовый</option>
+                        <option value="darkblue">Темно-синий</option>
+                        <option value="purple">Пурпурный</option>
+                    </select>
+                </label>
+            </div>
+            <label>Размер текста (<output class="pixels">14</output>px)
+            <input class="size-setting" type="range" min="8" max="48" step="1" value="14">
+            </label>
+        </div>
+        <article class="longread">
+            <div class="container">
+                <h1>Юморески</h1>
+                <p>— доктор, пациент умирает, почему вы ничего не делаете?
+                    — лол, так это другой челик зафейлился, а я просто рофлю с этого кринжа, ну рили, втф? зумер тупо чиллил, сердце воркало без траблов, а потом хуяк и какой-то сюр ваще, полный фейспалм, я аж джулом поперхнулся. за что этого краша так жизнь страйкнула?</p>
+                    <p>В США полицейский патрулирует свой участок на коне - увидел девочку на велике, подъезжает к ней и спрашивает :
+                        - Девочка, откуда у тебя такой велосипед, Санта подарил?
+                        - Да
+                        - Так вот скажи ему, что он должен быть С КА ТА ФО ТА МИ. Понятно? Без катафотов нельзя!
+                        - Ага! Дядя, а откуда у вас такой конь? Санта подарил?
+                        - Да, девочка
+                        .
+                        .
+                        .
+                        .
+                        .
+                        .
+                        - Так вот скажите ему, что у коня хуй должен внизу висеть! А не сверху сидеть</p>
+                        <p>В США приехала делегация из России.
+                            Спрашивают Байдена:
+                            - Почему у вас по улицам психи с автомобильными рулями бегают?
+                            Байден достаёт невидимый руль:
+                            - А ну, поехали поглядим</p>
+                            <p>Кашпировский в зале общается с народом, читает записки из зала:
+                                - Спасибо, у меня после Вашего сеанса рассосался шрам...
+                                - Спасибо, у меня рассосались рубцы...
+                                - А у нас на корабле после Ваших сеансов рассосался кок!
+                                Кашпировский: Как так - кок?
+                                Голос из зала: -Ну, раньше он сосал только у боцмана, а сейчас у всей команды!</p>
+                                <p>Однажды Учитель, показал учениками чистый лист бумаги, где в середине стояла черная точка и спросил: "Что вы видите?"
+                                    Первый ученик: "Точку".
+                                    Второй: "Черную точку".
+                                    Третий: "Жирную точку".
+                                    Тогда Учитель ответил: "Вы все увидели только точку и никто не заметил большого белого листа! Поэтому запомните, главный враг любви — равнодушие!".
+                                    "А при чем здесь любовь, учитель!?"
+                                    "А хуй его знает!". С этими словами Учитель обмазал лицо говном и выпрыгнул в окно.</p>
+                                    <p>Один ковбой спрашивает другого:
+                                        — Билл, чем ты лечил год назад свою лошадь, когда она заболела?
+                                        — Кормил прелым сеном.
+                                        Через неделю встречаются снова.
+                                        — Ты знаешь, Билл, не помогло сено. Моя лошадь сдохла.
+                                        — Так моя тоже сдохла.</p>
+            </div>
+        </article>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
