--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Настройка текста</title>
-    <link rel="stlylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="index-main">
@@ -38,6 +38,7 @@
                         <option value="purple">Пурпурный</option>
                     </select>
                 </label>
+                <label> <h2><a href="login.htm">Регистрация</a> </h2></label>
             </div>
             <label>Размер текста (<output class="pixels">14</output>px)
             <input class="size-setting" type="range" min="8" max="48" step="1" value="14">
