--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <option value="purple">Пурпурный</option>
                     </select>
                 </label>
-                <label> <h2><a href="login.htm">Регистрация</a> </h2></label>
+                <label> <h2><a href="login.html">Регистрация</a> </h2></label>
             </div>
             <label>Размер текста (<output class="pixels">14</output>px)
             <input class="size-setting" type="range" min="8" max="48" step="1" value="14">
